--- a/css/styles.css
+++ b/css/styles.css
@@ -57,7 +57,7 @@ body {
   letter-spacing: 0.02em;
   color: var(--text-color);
 }
-.main-text {
+.main-title {
   background-color: var(--h-color);
 }
 .main-text {
